2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/modules/manage_network_components.php: Removed entities.

2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandoradb.data.postgreSQL.sql
	 pandoradb.data.oracle.sql
	 pandoradb_data.sql: Fixed entities in tables tnetwork_component.
	 
	 Fixes: #3441112


2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_agente.php: Added agent description in 
	this view.
	
	Fixes: # 3424337

2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_conf_gis.php
	godmode/agentes/agent_manager.php: Fixed 'Ignore GIS data' and
	change labels.
	
	Fixes: #3437659

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/tip.css
	images/skin/skin_default/include/styles/pandora.css: Removed 
	background image in tip class.

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Removed entities
	from agent name.
	
	Fixes: #3437885

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/servers/manage_recontask.php
	 godmode/servers/manage_recontask_form.php: Fixed bug due to 
	 autorefresh in these views.

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/configure_alert_template.php: Fixed template 
	update. Thank you to Manuel Arostegui for the patch!

2011-11-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/snmpconsole/snmp_view.php: Added new free search and
	fix agent and OID combo search.

2011-11-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/snmpconsole/snmp_alert.php: Fixed bad time description.

	* godmode/reporting/visual_console_builder.editor.php
	 include/functions_visual_map.php: Now it's possible to link icons 
	 in visual console with a web page through the label. 

	* operation/visual_console/index.php
	 operation/visual_console/render_view.php